--- a/app/views/main.html
+++ b/app/views/main.html
@@ -29,6 +29,7 @@
                         <div ng-switch-when="dc-pie" id="{{ item.id }}" dc-pie="item" dimensions="Dimensions" measures="Measures" width="200" height="200" ></div>
                         <div ng-switch-when="dc-line" id="{{ item.id }}" dc-line="item" height="250" style="display:block;width: 100%;" ></div>
 						<div ng-switch-when="dc-compose" id="{{ item.id }}" dc-compose="item"  height="250" style="display:block;width: 100%;"></div>
+                        <div ng-switch-when="dc-network" id="{{ item.id }}" dc-network="item" height="250" style="display:block;width: 100%;" ></div>
                         <div ng-switch-when="pivot" id="{{ item.id }}" class="pivot" pivot-table="{}" data="item.data" height="250" style="display:block;width: 100%;"></div>
                     </span>
 					<!--<div id="dcPie{{ $index }}" dc-pie="pieChartOpts" dimensions="Dimension" measures="Measure" width="200" height="200" style="height:200px;display:block;width: 100%;"></div>-->
